--- a/tests/fuzz/CMakeLists.txt
+++ b/tests/fuzz/CMakeLists.txt
@@ -20,6 +20,7 @@ if (UA_BUILD_FUZZING_CORPUS)
 
     add_executable(corpus_generator ua_debug_dump_pkgs_file.c corpus_generator.c
                                     ${PROJECT_SOURCE_DIR}/tests/testing-plugins/testing_networklayers.c
+                                    ${PROJECT_SOURCE_DIR}/tests/testing-plugins/testing_config.c
                                     ${PROJECT_SOURCE_DIR}/tests/testing-plugins/testing_clock.c)
     target_link_libraries(corpus_generator open62541 ${open62541_LIBRARIES})
     assign_source_group(corpus_generator)
@@ -64,6 +65,7 @@ list(APPEND LIBS "${open62541_LIBRARIES}")
 set(fuzzing_plugin_sources ${PROJECT_SOURCE_DIR}/arch/network_tcp.c
     ${PROJECT_SOURCE_DIR}/tests/testing-plugins/testing_clock.c
     ${PROJECT_SOURCE_DIR}/tests/testing-plugins/testing_networklayers.c
+    ${PROJECT_SOURCE_DIR}/tests/testing-plugins/testing_config.c
     ${PROJECT_SOURCE_DIR}/plugins/ua_log_stdout.c
     ${PROJECT_SOURCE_DIR}/plugins/ua_config_default.c
     ${PROJECT_SOURCE_DIR}/plugins/ua_nodestore_ziptree.c
