refactor(pubsub): Update XDP to 5.4 and above kernel
 - Static library usage of bpf removed
 - XDP APIs modified with respect to new kernel of 5.4
 - TODO: c99 support

Change-Id: I16cb2092fa9c0385c8f6f6692d6938b4c7d5d9ca

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -158,7 +158,7 @@ add_custom_target(test-verbose COMMAND ${CMAKE_CTEST_COMMAND} --verbose)
 if(UA_ENABLE_PUBSUB)
     if(UA_ENABLE_PUBSUB_ETH_UADP_XDP)
         list(APPEND open62541_LIBRARIES ${XDP_LIBRARY})
-        list(APPEND LIBS elf)
+        list(APPEND LIBS elf bpf)
     endif()
 endif()
 
