--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   standard:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
       with:
