--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -248,4 +248,7 @@ if(UA_ENABLE_PUBSUB)
             message(WARNING "PubSub subscriber monitoring example build needs LINUX OS. Skip build.")
         endif()
     endif()
+    if(UA_ENABLE_PUBSUB_EVENTS)
+        add_example(tutorial_pubsub_publish_event pubsub/tutorial_pubsub_publish_event.c)
+    endif()
 endif()
