--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -97,9 +97,11 @@ endif()
 add_example(tutorial_client_firststeps tutorial_client_firststeps.c)
 
 add_example(tutorial_client_events tutorial_client_events.c)
+add_example(tutorial_client_eventfilter tutorial_client_eventfilter.c)
 
 if(UA_ENABLE_SUBSCRIPTIONS_EVENTS)
   add_example(tutorial_server_events tutorial_server_events.c)
+  add_example(tutorial_server_eventfilter tutorial_server_eventfilter.c)
   if(UA_ENABLE_SUBSCRIPTIONS_ALARMS_CONDITIONS)
     add_example(tutorial_server_alarms_conditions tutorial_server_alarms_conditions.c)
   endif()
