--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -290,6 +290,11 @@ if(UA_ENABLE_SUBSCRIPTIONS)
   add_executable(check_subscription_events server/check_subscription_events.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-testplugins>)
   target_link_libraries(check_subscription_events ${LIBS})
   add_test_valgrind(subscription_events ${TESTS_BINARY_DIR}/check_subscription_events)
+
+  add_executable(check_subscription_events_extended server/check_subscription_events_extended.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-testplugins>)
+  target_link_libraries(check_subscription_events_extended ${LIBS})
+  add_test_valgrind(subscription_events ${TESTS_BINARY_DIR}/check_subscription_events_extended)
+
 endif()
 
 add_executable(check_nodestore server/check_nodestore.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-testplugins>)
