--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -17,6 +17,8 @@ jobs:
         sudo apt-get install -y -qq libmbedtls-dev openssl
     - name: Debug Build & Unit Tests (gcc)
       run: source tools/ci.sh && unit_tests
+    - name: Debug Build & Unit Tests with multithreading (gcc)
+      run: source tools/ci.sh && unit_tests_mt
     - name: Debug Build & Unit Tests (clang)
       run: source tools/ci.sh && CC=clang-11 CXX=clang++-11 unit_tests
     - name: Debug Build & Unit Tests (tcc)
