--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -238,7 +238,7 @@ if(UA_ENABLE_PUBSUB)
             if(UA_ENABLE_PUBSUB_ETH_UADP)
                 add_subdirectory(pubsub_realtime/nodeset)
                 add_example(pubsub_TSN_publisher pubsub_realtime/pubsub_TSN_publisher.c pubsub_realtime/circular_buffer.c)
-                add_example(pubsub_TSN_loopback pubsub_realtime/pubsub_TSN_loopback.c)
+                add_example(pubsub_TSN_loopback pubsub_realtime/pubsub_TSN_loopback.c pubsub_realtime/circular_buffer.c)
                 target_link_libraries(pubsub_TSN_publisher rt pthread)
                 target_link_libraries(pubsub_TSN_loopback rt pthread)
             endif()
