--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -39,6 +39,7 @@
 #cmakedefine UA_ENABLE_EXPERIMENTAL_HISTORIZING
 #cmakedefine UA_ENABLE_SUBSCRIPTIONS_EVENTS
 #cmakedefine UA_ENABLE_JSON_ENCODING
+#cmakedefine UA_ENABLE_CLOCK_TAI
 #cmakedefine UA_ENABLE_PUBSUB_MQTT
 #cmakedefine UA_ENABLE_ENCRYPTION_MBEDTLS
 #cmakedefine UA_ENABLE_ENCRYPTION_OPENSSL
