--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -65,6 +65,7 @@
 #cmakedefine UA_GENERATED_NAMESPACE_ZERO
 #cmakedefine UA_GENERATED_NAMESPACE_ZERO_FULL
 #cmakedefine UA_ENABLE_PUBSUB_MONITORING
+#cmakedefine UA_ENABLE_PUBSUB_BUFMALLOC
 
 #cmakedefine UA_PACK_DEBIAN
 
