feat(examples): Add example for encrypted PubSub publisher

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -225,6 +225,9 @@ if(UA_ENABLE_PUBSUB)
             endif()
         endif()
     endif()
+    if(UA_ENABLE_PUBSUB_ENCRYPTION)
+        add_example(pubsub_publish_encrypted pubsub/pubsub_publish_encrypted.c)
+    endif()
     if(UA_ENABLE_PUBSUB_MQTT)
         if(NOT WIN32)
             include_directories(${PROJECT_SOURCE_DIR}/../plugins)
