--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -55,14 +55,14 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR}/bin/exampl
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_BINARY_DIR}/bin/examples)
 
 macro(add_example EXAMPLE_NAME EXAMPLE_SOURCE)
-  add_executable(${EXAMPLE_NAME} ${STATIC_OBJECTS} ${EXAMPLE_SOURCE} ${ARGN} ${PROJECT_SOURCE_DIR}/common.h)
-  target_link_libraries(${EXAMPLE_NAME} open62541::open62541)
-  assign_source_group(${EXAMPLE_SOURCE})
-  set_target_properties(${EXAMPLE_NAME} PROPERTIES FOLDER "open62541/examples")
-  set_target_properties(${EXAMPLE_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
-  if(UA_FORCE_CPP)
-      set_source_files_properties(${EXAMPLE_SOURCE} PROPERTIES LANGUAGE CXX)
-  endif()
+    add_executable(${EXAMPLE_NAME} ${STATIC_OBJECTS} ${EXAMPLE_SOURCE} ${ARGN} ${PROJECT_SOURCE_DIR}/common.h)
+    target_link_libraries(${EXAMPLE_NAME} open62541::open62541)
+    assign_source_group(${EXAMPLE_SOURCE})
+    set_target_properties(${EXAMPLE_NAME} PROPERTIES FOLDER "open62541/examples")
+    set_target_properties(${EXAMPLE_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+    if(UA_FORCE_CPP)
+        set_source_files_properties(${EXAMPLE_SOURCE} PROPERTIES LANGUAGE CXX)
+    endif()
 endmacro()
 
 #############
@@ -97,14 +97,14 @@ endif()
 add_example(tutorial_client_firststeps tutorial_client_firststeps.c)
 
 add_example(tutorial_client_events tutorial_client_events.c)
-add_example(tutorial_client_eventfilter tutorial_client_eventfilter.c)
 
 if(UA_ENABLE_SUBSCRIPTIONS_EVENTS)
-  add_example(tutorial_server_events tutorial_server_events.c)
-  add_example(tutorial_server_eventfilter tutorial_server_eventfilter.c)
-  if(UA_ENABLE_SUBSCRIPTIONS_ALARMS_CONDITIONS)
-    add_example(tutorial_server_alarms_conditions tutorial_server_alarms_conditions.c)
-  endif()
+    add_example(tutorial_server_events tutorial_server_events.c)
+    add_example(server_random_events server_random_events.c)
+    add_example(client_eventfilter client_eventfilter.c)
+    if(UA_ENABLE_SUBSCRIPTIONS_ALARMS_CONDITIONS)
+        add_example(tutorial_server_alarms_conditions tutorial_server_alarms_conditions.c)
+    endif()
 endif()
 
 ##################
@@ -181,7 +181,7 @@ if(UA_ENABLE_NODEMANAGEMENT)
     add_example(access_control_server access_control/server_access_control.c)
     add_example(access_control_client access_control/client_access_control.c)
     if(UA_ENABLE_ENCRYPTION)
-    add_example(access_control_client_encrypt access_control_encrypt/client_access_control_encrypt.c)
+        add_example(access_control_client_encrypt access_control_encrypt/client_access_control_encrypt.c)
     endif()
 endif()
 
