--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -19,10 +19,12 @@ jobs:
       run: source tools/ci.sh && unit_tests
     - name: Debug Build & Unit Tests with multithreading (gcc)
       run: source tools/ci.sh && unit_tests_mt
+    - name: Debug Build & Unit Tests without borrow decoding (gcc)
+      run: source tools/ci.sh && unit_tests_no_borrow
     - name: Debug Build & Unit Tests (clang)
       run: source tools/ci.sh && CC=clang-11 CXX=clang++-11 unit_tests
     - name: Debug Build & Unit Tests (tcc)
-      run: source tools/ci.sh && CC=tcc unit_tests
+      run: source tools/ci.sh && CC=tcc unit_tests_no_borrow
     - name: Encryption (MbedTLS) Build & Unit Tests (gcc)
       run: source tools/ci.sh && unit_tests_encryption_mbedtls
     - name: Encryption (OpenSSL) Build & Unit Tests (gcc)
