feat(pubsub) extended networkmessage generation routines for the raw encoding together with pubsub_raw_rt

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -206,6 +206,7 @@ if(UA_ENABLE_PUBSUB)
     add_example(tutorial_pubsub_publish_raw pubsub/tutorial_pubsub_publish_raw.c)
     add_example(server_pubsub_publisher_iop pubsub/server_pubsub_publisher_iop.c)
     add_example(server_pubsub_publish_rt_level pubsub/server_pubsub_publisher_rt_level.c)
+    add_example(server_pubsub_publish_rt_level_raw pubsub/server_pubsub_publisher_rt_level_raw.c)
     add_example(server_pubsub_rt_information_model pubsub/server_pubsub_rt_field_information_model.c)
     if(CMAKE_SYSTEM MATCHES "Linux")
         if(UA_ENABLE_PUBSUB_ETH_UADP AND UA_ENABLE_MALLOC_SINGLETON AND UA_ENABLE_IMMUTABLE_NODES)
