refactor(core): add check macros
The macros provide a way for cleaner error handling of
return codes (e.g. UA_StatusCode) and append additional
information to logging messages.

Adding file and line numbers to logging messages can be
activated and deactivted via CMake flag.
UA_DEBUG_FILE_LINE_INFO

--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -75,7 +75,7 @@
 /* Options for Debugging */
 #cmakedefine UA_DEBUG
 #cmakedefine UA_DEBUG_DUMP_PKGS
-
+#cmakedefine UA_DEBUG_FILE_LINE_INFO
 /**
  * Function Export
  * ---------------
