feat(pubsub): decryption
Adding the possibility to verify and decrypt pubsub networkmessages.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -954,6 +954,9 @@ if(UA_ENABLE_PUBSUB)
         list(APPEND lib_sources ${PROJECT_SOURCE_DIR}/src/pubsub/ua_pubsub_bufmalloc.c)
         list(APPEND internal_headers ${PROJECT_SOURCE_DIR}/src/pubsub/ua_pubsub_bufmalloc.h)
     endif()
+    if(UA_ENABLE_PUBSUB_ENCRYPTION)
+        list(APPEND lib_sources ${PROJECT_SOURCE_DIR}/src/pubsub/ua_pubsub_security.c)
+    endif()
 endif()
 
 if(UA_ENABLE_JSON_ENCODING)
