test(pubsub): add decryption test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -404,7 +404,12 @@ if(UA_ENABLE_PUBSUB)
             $<TARGET_OBJECTS:open62541-testplugins>)
         target_link_libraries(check_pubsub_encryption_aes256 ${LIBS})
         add_test_valgrind(check_pubsub_encryption_aes256 ${TESTS_BINARY_DIR}/check_pubsub_encryption_aes256)
-
+    
+        add_executable(check_pubsub_decryption pubsub/check_pubsub_decryption.c
+                $<TARGET_OBJECTS:open62541-object>
+                $<TARGET_OBJECTS:open62541-testplugins>)
+        target_link_libraries(check_pubsub_decryption ${LIBS})
+        add_test_valgrind(check_pubsub_decryption ${TESTS_BINARY_DIR}/check_pubsub_decryption)
     endif()
 
     if (UA_ENABLE_PUBSUB_MONITORING)
