--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -25,6 +25,8 @@ jobs:
       run: source tools/ci.sh && CC=tcc unit_tests
     - name: Encryption (MbedTLS) Build & Unit Tests (gcc)
       run: source tools/ci.sh && unit_tests_encryption_mbedtls
+    - name: PubSub Encryption (MbedTLS) Build & Unit Tests (gcc)
+      run: source tools/ci.sh && unit_tests_encryption_mbedtls_pubsub
     - name: Encryption (OpenSSL) Build & Unit Tests (gcc)
       run: source tools/ci.sh && unit_tests_encryption_openssl
     - name: Release Build
