--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -25,6 +25,7 @@
 #cmakedefine UA_ENABLE_AMALGAMATION
 #endif
 #cmakedefine UA_ENABLE_METHODCALLS
+#cmakedefine UA_ENABLE_FILETYPE_OBJECT_SUPPORT
 #cmakedefine UA_ENABLE_NODEMANAGEMENT
 #cmakedefine UA_ENABLE_SUBSCRIPTIONS
 #cmakedefine UA_ENABLE_PUBSUB
