ex(PubSub): Realtime pubsub examples for ARM architecture
 - Examples are using monotonic clock
 - Handled Operbasetime, montonicOffset
 - The application can run in TSN IP switches
 - Follow the Readme_PubSub.txt for testing

Signed-off-by: Keerthivasan Alagarsamy Senthilkumaran <keerthivasan.as@kalycito.com>
Change-Id: I0efd78ba16066b54382379e882bd360e65a2094e

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -191,7 +191,6 @@ if(UA_ENABLE_DISCOVERY_MULTICAST)
 endif()
 
 add_subdirectory(nodeset)
-
 ####################
 #  Example PubSub  #
 ####################
@@ -216,6 +215,10 @@ if(UA_ENABLE_PUBSUB)
     else (NOT BUILD_SHARED_LIBS)
         add_example(pubsub_subscribe_standalone pubsub/pubsub_subscribe_standalone.c)
         if(CMAKE_SYSTEM MATCHES "Linux")
+            add_example(pubsub_TSN_publisher_multiple_thread pubsub_realtime/arm/pubsub_TSN_publisher_multiple_thread.c)
+            add_example(pubsub_TSN_loopback_single_thread pubsub_realtime/arm/pubsub_TSN_loopback_single_thread.c)
+            target_link_libraries(pubsub_TSN_publisher_multiple_thread rt pthread)
+            target_link_libraries(pubsub_TSN_loopback_single_thread rt pthread)
             if(UA_ENABLE_PUBSUB_ETH_UADP)
                 add_subdirectory(pubsub_realtime/nodeset)
                 add_example(pubsub_TSN_publisher pubsub_realtime/pubsub_TSN_publisher.c)
