feat(core) use pointers within the DataTypeMember structure
Co-authored-by: Pavel Ivanov <pavel.ivanov@enmtech.ru>
Co-authored-by: Julius Pfrommer <julius.pfrommer@web.de>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -172,8 +172,13 @@ if(UA_ENABLE_ENCRYPTION)
     target_include_directories(client_encryption PRIVATE "${PROJECT_SOURCE_DIR}/examples")
 endif()
 
-add_example(custom_datatype_client custom_datatype/client_types_custom.c)
-add_example(custom_datatype_server custom_datatype/server_types_custom.c)
+if (NOT (BUILD_SHARED_LIBS AND WIN32))
+    add_example(custom_datatype_client custom_datatype/client_types_custom.c)
+    add_example(custom_datatype_server custom_datatype/server_types_custom.c)
+else()
+    MESSAGE(WARNING "Can't build custom datatype examples on WIN32 when BUILD_SHARED_LIBS enabled. Skipping
+custom_datatype_client and custom_datatype_server!")
+endif()
 
 if(UA_ENABLE_NODEMANAGEMENT)
     add_example(access_control_server access_control/server_access_control.c)
